swarm/tests/ui/fail/out_event_deprecation.stderr
error: use of deprecated constant `out_event::_w`:
               It is deprecated to out_event.
               Please instead to_swarm.
 --> tests/ui/fail/out_event_deprecation.rs:7:8
  |
7 | struct Foo {
  |        ^^^
  |
note: the lint level is defined here
 --> tests/ui/fail/out_event_deprecation.rs:1:9
  |
1 | #![deny(warnings)] // Ensure the warnings we produce surface as errors.
  |         ^^^^^^^^
  = note: `#[deny(deprecated)]` implied by `#[deny(warnings)]`
